--- a/app/src/main/res/layout/item_genre_movie.xml
+++ b/app/src/main/res/layout/item_genre_movie.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
-    app:cardElevation="1dp"
-    app:cardCornerRadius="@dimen/radius_card_movie">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="genre"
+            type="me.dzikry.movapp.data.models.Genre" />
+    </data>
 
-    <LinearLayout
-        android:id="@+id/background"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/yellow">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        app:cardElevation="1dp"
+        app:cardCornerRadius="@dimen/radius_card_movie">
 
-        <TextView
-            android:id="@+id/genre"
+        <LinearLayout
+            android:id="@+id/background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@tools:sample/lorem"
-            android:fontFamily="@font/poppins_medium"
-            android:padding="10dp"/>
+            android:orientation="vertical"
+            android:background="@color/yellow">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/genreName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{genre.name}"
+                tools:text="@tools:sample/lorem"
+                android:fontFamily="@font/poppins_medium"
+                android:padding="10dp"/>
 
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</layout>
