--- a/app/src/main/res/layout/item_news_category.xml
+++ b/app/src/main/res/layout/item_news_category.xml
@@ -25,6 +25,7 @@
                 android:layout_height="0dp"
                 android:layout_width="0dp"
                 android:scaleType="centerCrop"
+                loadUrl="@{news.urlToImage}"
                 app:layout_constraintBottom_toTopOf="@+id/lineCenter"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -96,6 +97,7 @@
                 android:layout_marginEnd="16dp"
                 android:textColor="?attr/textPrimary"
                 android:textSize="12sp"
+                publishAuthor="@{news.publishedAt}"
                 app:layout_constraintBottom_toBottomOf="@+id/item_image_author"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/item_image_author"
