--- a/app/src/main/res/layout/item_news_trending.xml
+++ b/app/src/main/res/layout/item_news_trending.xml
@@ -32,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
+                loadUrl="@{news.urlToImage}"
                 app:layout_constraintBottom_toTopOf="@+id/lineCenter"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +66,7 @@
             android:layout_marginStart="16dp"
             android:textColor="?attr/textPrimary"
             android:textSize="12sp"
+            publishAuthor="@{news.publishedAt}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toBottomOf="@+id/item_title"
