--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -56,8 +56,7 @@
         android:id="@+id/support2"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/logo_newsapi"
+        android:src="@drawable/logo_news_api"
         android:layout_margin="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
